# workout-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/skills/: create-workout.md
workout_app/: cli.py  exercises.py  generate.py  gif.py  image.py  logger.py  video.py
