[project]
name = "workout-app"
version = "0.1.0"
description = "Generate realistic exercise GIFs using AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "replicate>=1.0.7",
    "typer>=0.24.1",
]

[project.scripts]
generate-exercise-gif = "workout_app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
